--- a/ldtur/src/app/components/article1/article1.component.scss
+++ b/ldtur/src/app/components/article1/article1.component.scss
@@ -1,10 +1,10 @@
 div{
     height: 600px;
     padding-top: 20px;
-    background-color: black;
     background-image: url(../../../assets/images/wp3081001-punta-cana-wallpapers.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    color: white;
 }
 h1{
     text-align: center;
