--- a/ldtur/src/app/components/article1/article1.component.scss
+++ b/ldtur/src/app/components/article1/article1.component.scss
@@ -13,4 +13,8 @@ p{
     text-align: center;
     width: 500px;
     margin: auto;
+    font-size: 50px;
+    background-color: rgba(255, 255, 255, 0.089);
+    color: black;
+    border-radius: 10px;
 }
